# weekend-raytracer

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  color.rs  illumable.rs  lib.rs  main.rs  material.rs  point.rs  ray.rs  sphere.rs  utils.rs  world.rs
