[package]
name = "raytracer"
version = "0.1.0"
authors = ["Joe Ardent <code@ardent.nebcorp.com>"]
edition = "2018"

[dependencies]
rand = { version = "*", features=["small_rng"] }
png = "*"
euclid = "*"
clap = "*"
chrono = "0.4.19"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.3"
num_cpus = "1.13.0"


[profile.dev]
opt-level = 3
